@@ -1,3 +1,8 @@
+2009-03-26  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/history.c (write_history_list): Indexing istart from 1 otherwise
+	"history" command (without arguments) does not work.
+
 2009-03-24  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c:  Fix breakage if configured --disable-binary-data-file
